@@ -8,9 +8,7 @@ version             = 0.019
 
 [@Author::REFECO]
 [Prereqs]
-perl                        = v5.26
 Bitcoin::Crypto             = 2.001
-Crypt::Digest::Keccak256    = 0.078
 Crypt::Perl                 = 0.38
 Crypt::ScryptKDF            = 0.010
 CryptX                      = 0.078
@@ -22,4 +20,4 @@ Net::SSH::Perl              = 2.14
 Scalar::Util                = 1.63
 
 [Prereqs / TestRequires]
-Test::Fatal                 = 0.017
+Test::More                 = 0
